# das-eimerargument

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-CODE  LICENSE-CONTENT  README.md  build.rs  deploy.sh  paper.tex  serve.py
data/: brake_recoil_gpu_single.csv
kernels/: bond_kernel.cu  dd_math.cuh  field_residual_kernel.cu  integrate_kernel.cu  weber_kernel.cu
src/: config.rs  integrator.rs  lib.rs  magnets.rs  main.rs  motor.rs  torus.rs  vec3.rs  weber.rs
src/gpu/: dd.rs  mod.rs
